--- a/themes/openemr/layouts/partials/navigation.html
+++ b/themes/openemr/layouts/partials/navigation.html
@@ -18,7 +18,6 @@
         <li><a href="{{ "wiki" | absURL}}">Docs</a></li>
         <li><a href="https://community.open-emr.org/">Forum</a></li>
         <li><a href="{{ "chat" | absURL }}">Chat</a></li>
-        <li><a href="{{ "donate" | absURL }}">Donate</a></li>
         <li class="nav-item dropdown">
           <a href="" class="nav-link dropdown-toggle" id="supportDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Support</a>
           <div class="dropdown-menu" aria-labelledby="supportDropdownMenuLink">
@@ -37,6 +36,7 @@
           </a>
         </li>
         {{ end }}
+        <li><a href="{{ "donate" | absURL }}" class="btn btn-danger btn-sm"><i class="fa fa-heart fa-fw"></i>&nbsp;Donate</a></li>
       </ul>
     </div>
   </div>
