--- a/themes/openemr/assets/scss/_gt.scss
+++ b/themes/openemr/assets/scss/_gt.scss
@@ -20,14 +20,12 @@
     background-color: hsl(217, 100, 21);
 
     .donation {
-        // background-color: hsl(47, 100, 50);
         background-color: hsl(76, 91, 38) !important;
-        // background-color: red;
         @include transition(0.25s);
 
         &:hover {
             transform: scale(1.015);
-            background-color: hsl(76, 91, 50);
+            background-color: hsl(76, 91, 35) !important;
         }
 
         a {
