Giving Tuesday Day

--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -5,7 +5,7 @@
         <div class="content">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="display-1 mb-4">Save the Date!</h2>
+                    <h2 class="display-1 mb-4">Support OpenEMR, Give Today.</h2>
                 </div>
                 <div class="col-sm-12 col-lg-7">
                     <img src="{{ "images/GT_logo_white.png" | absURL }}" alt="" class="img-fluid mt-4" width="250">
@@ -13,15 +13,15 @@
                         GivingTuesday is a global day of generosity that will take place on <strong>December&nbsp;1,&nbsp;2020</strong>. A global generosity movement, GivingTuesday unleashes the power of people and organizations to transform their communities and the world. GivingTuesday strives to build a world in which the catalytic power of generosity is at the heart of the society we build together, unlocking dignity, opportunity, and equity around the globe.
                     </p>
                     <div class="card donation">
-                        <a href="{{ "donate" | absURL }}">
+                        <a href="https://www.paypal.com/donate?hosted_button_id=TB3FJYFQ4PWQJ">
                             <div class="card-body">
                                 <i class="fa fa-heart fa-4x float-left mr-4"></i>
-                                <h4 class="card-title">Donate Now</h4>
-                                <p class="card-text">It's never too early to give.</p>
+                                <h4 class="card-title">Give Now</h4>
+                                <div class="card-body">Help support future development of OpenMER</div>
                             </div>
                         </a>
                     </div> <!-- end .card -->
-                    <h4 class="mt-5">Keep up with GivingTuesday - signup for our newsletter</h4>
+                    <h4 class="mt-5">Signup for our newsletter</h4>
                     <form action="https://open-emr.us16.list-manage.com/subscribe/post?u=6d7e993ba4e35e92c898704f2&amp;id=cd514c2d82" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                             <div class="form-group">
                                 <label for="mce-EMAIL">Email Address (Required) </label>
