--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -17,7 +17,7 @@
                             <div class="card-body">
                                 <i class="fa fa-heart fa-4x float-left mr-4"></i>
                                 <h4 class="card-title">Give Now</h4>
-                                <div class="card-body">Help support future development of OpenMER</div>
+                                <div class="card-body">Help support future development of OpenEMR</div>
                             </div>
                         </a>
                     </div> <!-- end .card -->
