--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -8,9 +8,9 @@
                     <h2 class="display-1 mb-4">Support OpenEMR, Give Today.</h2>
                 </div>
                 <div class="col-sm-12 col-lg-7">
-                    <img src="{{ "images/GT_logo_white.png" | absURL }}" alt="" class="img-fluid mt-4" width="250">
+                    <img src="{{ "images/give_page.jpg" | absURL }}" alt="" class="img-fluid mt-4" width="250">
                     <p class="lead pt-3 mb-5">
-                        GivingTuesday is a global day of generosity that will take place on <strong>December&nbsp;1,&nbsp;2020</strong>. A global generosity movement, GivingTuesday unleashes the power of people and organizations to transform their communities and the world. GivingTuesday strives to build a world in which the catalytic power of generosity is at the heart of the society we build together, unlocking dignity, opportunity, and equity around the globe.
+                        Year end donation funds 2015 ONC Certification, API and FHIR!
                     </p>
                     <div class="card donation">
                         <a href="https://www.paypal.com/donate?hosted_button_id=TB3FJYFQ4PWQJ">
