--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -8,8 +8,7 @@
                     <h2 class="display-1 mb-4">Support OpenEMR, Give Today.</h2>
                 </div>
                 <div class="col-sm-12 col-lg-7">
-                    <img src="{{ "images/give_page.jpg" | absURL }}" alt="" class="img-fluid mt-4" width="250">
-                    <p class="lead pt-3 mb-5">
+                    <p class="h4 font-weight-light pt-3 mb-5">
                         Year end donation funds 2015 ONC Certification, API and FHIR!
                     </p>
                     <div class="card donation">
