update to highlight nfts

--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-7">
                     <p class="h4 font-weight-light pt-3 mb-5">
-                        Year end donation funds 2015 ONC Certification, API and FHIR!
+                        Donations fund 2015 ONC Certification, API and FHIR!
                     </p>
                     <div class="card donation">
                         <a href="https://www.paypal.com/donate?hosted_button_id=TB3FJYFQ4PWQJ">
@@ -20,33 +20,16 @@
                             </div>
                         </a>
                     </div> <!-- end .card -->
-                    <h4 class="mt-5">Signup for our newsletter</h4>
-                    <form action="https://open-emr.us16.list-manage.com/subscribe/post?u=6d7e993ba4e35e92c898704f2&amp;id=cd514c2d82" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                            <div class="form-group">
-                                <label for="mce-EMAIL">Email Address (Required) </label>
-                                <input type="email" value="" placeholder="email@example.com" name="EMAIL" class="required form-control email" id="mce-EMAIL">
-                            </div>
-                            <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock form-group">
-                                <div class="content__gdpr">
-                                    <p><strong>Permissions</strong><br>Please select all the ways you would like to hear from OpenEMR</p>
-                                    <div class="form-check">
-                                        <input type="checkbox" id="gdpr_13773" name="gdpr[13773]" value="Y" class="av-checkbox gdpr form-check-input">
-                                        <label class="checkbox subfield form-check-label" for="gdpr_13773">Email Newsletter</label><br>
-                                        <input type="checkbox" id="gdpr_16333" name="gdpr[16333]" value="Y" class="av-checkbox gdpr form-check-input">
-                                        <label class="checkbox subfield form-check-label" for="gdpr_16333">Security Related Updates</label>
-                                    </div>
-                                </div>
-                                <div class="content__gdprLegal">
-                                    <small>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit <a href="https://www.iubenda.com/privacy-policy/54578274" target="_blank">our privacy policy</a>. We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></small>
-                                </div>
-                            </div>
-                            <div id="mce-responses" class="clear">
-                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                <div class="response" id="mce-success-response" style="display:none"></div>
-                            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6d7e993ba4e35e92c898704f2_cd514c2d82" tabindex="-1" value=""></div>
-                            <div class="clear"><button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;Subscribe</button></div>
-                    </form>
+
+                    <p class="h4 font-weight-light pt-5 mb-4">
+                        Have fun donating to OpenEMR buy purchasing a piece of OpenEMR History!
+                    </p>
+                    <nft-card
+                        contractAddress="0x495f947276749ce646f68ac8c248420045cb7b5e"
+                        tokenId="92931315403547181889022908380199443582932394302701985656374880934676395982849">
+                    </nft-card>
+                    <script src="https://unpkg.com/embeddable-nfts/dist/nft-card.min.js"></script>
+                    <div class="pt-2 mb-4 ml-2 mt-4"><a href="{{ .Site.BaseURL }}blog/buy-a-piece-of-openemr-history" class="btn btn-primary font-weight-bold"><i class="fa fa-history"></i> Click here to see other available pieces of OpenEMR History</a></div>
                     <style type="text/css">
                         #mc-embedded-subscribe-form input[type=checkbox]{display: inline; width: auto;margin-right: 10px;}
                         #mergeRow-gdpr {margin-top: 20px;}
