--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -22,7 +22,7 @@
                     </div> <!-- end .card -->
 
                     <p class="h4 font-weight-light pt-5 mb-4">
-                        Have fun donating to OpenEMR buy purchasing a piece of OpenEMR History!
+                        Have fun donating to OpenEMR by purchasing a piece of OpenEMR History!
                     </p>
                     <nft-card
                         contractAddress="0x495f947276749ce646f68ac8c248420045cb7b5e"
