--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -12,7 +12,7 @@
                         Donations fund 2015 ONC Certification, API and FHIR!
                     </p>
                     <div class="card donation">
-                        <a href="https://www.paypal.com/donate?hosted_button_id=TB3FJYFQ4PWQJ">
+                        <a href="https://www.open-emr.org/donate/">
                             <div class="card-body">
                                 <i class="fa fa-heart fa-4x float-left mr-4"></i>
                                 <h4 class="card-title">Give Now</h4>
