added modules link

--- a/themes/openemr/layouts/partials/footer.html
+++ b/themes/openemr/layouts/partials/footer.html
@@ -13,6 +13,7 @@
           <li><a href="/wiki/index.php/OpenEMR_Features">Features</a></li>
           <li><a href="/demo">Demo</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Downloads">Download</a></li>
+          <li><a href="/wiki/index.php/OpenEMR_Modules">Modules</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="/wiki">Docs</a></li>
           <li><a href="https://community.open-emr.org/">Forum</a></li>
