--- a/themes/openemr/layouts/lectures/single.html
+++ b/themes/openemr/layouts/lectures/single.html
@@ -1,1 +1,13 @@
-TEst
+{{ define "main" }}
+<h2>
+  <a href="{{ .Params.recording_url }}" target="_blank">{{ .Title }}</a>
+</h2>
+<div class="d-block">{{ .Params.presenter }}</div>
+<div class="d-block">{{ .PublishDate.Format "Monday, January 2, 2006" }}</div>
+<div class="d-block pt-2">
+  <p class="lead">{{ .Summary }}</p>
+</div>
+<div class="d-block">
+  <a href="{{ .Params.recording_url }}" target="_blank"><img src="{{ .Params.image | absURL }}" class="img-fluid w-50" alt=""></a>
+</div>
+{{ end }}
