add fax/sms module, remove onc cert

--- a/themes/openemr/layouts/partials/navigation.html
+++ b/themes/openemr/layouts/partials/navigation.html
@@ -18,6 +18,7 @@
           <a href="" class="nav-link dropdown-toggle" id="modulesDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Modules</a>
           <div class="dropdown-menu" aria-labelledby="modulesDropdownMenuLink">
             <div class="arrow-up"></div>
+            <a class="dropdown-item" href="{{ "https://community.open-emr.org/t/v2-2-0-fax-sms-module-released/16157" }}">Fax/SMS</a>
             <a class="dropdown-item" href="{{ "/wiki/index.php/OpenEMR_Modules#Telehealth" }}">Telehealth</a>
           </div>
         </li>
