Add support for modules

--- a/themes/openemr/layouts/partials/navigation.html
+++ b/themes/openemr/layouts/partials/navigation.html
@@ -14,13 +14,7 @@
         <li><a href="{{ "wiki/index.php/OpenEMR_Features" | absURL }}">Features</a></li>
         <li><a href="{{ .Site.Params.demoURL | absURL }}">Demo</a></li>
         <li><a href="{{ "wiki/index.php/OpenEMR_Downloads" | absURL }}">Download</a></li>
-        <li class="nav-item dropdown">
-          <a href="" class="nav-link dropdown-toggle" id="modulesDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Modules</a>
-          <div class="dropdown-menu" aria-labelledby="modulesDropdownMenuLink">
-            <div class="arrow-up"></div>
-            <a class="dropdown-item" href="{{ "/wiki/index.php/OpenEMR_Modules#Telehealth" }}">Telehealth</a>
-          </div>
-        </li>
+        <li><a href="{{ "modules" | absURL }}" >Modules</a></li>
         <li><a href="{{ "blog" | absURL }}">Blog</a></li>
         <li><a href="{{ "wiki" | absURL}}">Docs</a></li>
         <li><a href="https://community.open-emr.org/">Forum</a></li>
