--- a/themes/openemr/layouts/lectures/single.html
+++ b/themes/openemr/layouts/lectures/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <main class="page container">
   <h2>
-    <a href="{{ .Params.recording_url }}" target="_blank">{{ .Title }}</a>
+    <a id="{{ .Params.anchor_id}}" href="{{ .Params.recording_url }}" target="_blank">{{ .Title }}</a>
   </h2>
   <div class="d-block">{{ .Params.presenter }}</div>
   <div class="d-block">{{ .PublishDate.Format "Monday, January 2, 2006" }}</div>
