--- a/themes/openemr/layouts/lectures/list.html
+++ b/themes/openemr/layouts/lectures/list.html
@@ -17,22 +17,30 @@
         <h2>Zoom Call in Details</h2>
         <ul>
           <li>The call passcode is <strong>989410</strong></li>
-          <li>Join from Telephone
-            <ul>
-              <li>Dial: (646) 558-8656 or (408) 638-0968</li>
-              <li>Meeting ID: 567 231 500</li>
-              <li>International Numbers Available: <a href="https://zoom.us/zoomconference">https://zoom.us/zoomconference</a></li>
-            </ul>
-          </li>
           <li>Join from PC, Mac, Linux, iOS or Android
             <ul>
               <li><a href="https://zoom.us/j/567231500">https://zoom.us/j/567231500</a></li>
             </ul>
           </li>
+          <li>Join from Telephone
+            <ul>
+              <li>Meeting ID: 567 231 500</li>
+              <li>Dial by your location</li>
+                <ul>
+                  <li>253 215 8782 US (Tacoma)</li>
+                  <li>346 248 7799 US (Houston)</li>
+                  <li>669 900 6833 US (San Jose)</li>
+                  <li>312 626 6799 US (Chicago)</li>
+                  <li>646 876 9923 US (New York)</li>
+                  <li>301 715 8592 US (Washington DC)</li>
+              </ul>
+              <li>International Numbers Available: <a href="https://zoom.us/zoomconference">https://zoom.us/zoomconference</a></li>
+            </ul>
+          </li>
           <li>Join from iPhone one-tap
             <ul>
-              <li>16465588656,567231500#</li>
-              <li>14086380968,567231500#</li>
+              <li>16468769923,567231500#</li>
+              <li>13462487799,567231500#</li>
             </ul>
           </li>
         </ul>
