--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -14,7 +14,7 @@
                     <div class="card donation">
                         <a href="{{ .Site.BaseURL }}donate/">
                             <div class="card-body">
-                                <i class="fa fa-heart fa-4x float-left mr-4"></i>
+                                <i class="fa fa-heart fa-4x float-left me-4"></i>
                                 <h4 class="card-title">Give Now</h4>
                                 <div class="card-body">Help support future development of OpenEMR</div>
                             </div>
@@ -29,7 +29,7 @@
                         tokenId="92931315403547181889022908380199443582932394302701985656374880944572000632833">
                     </nft-card>
                     <script src="https://unpkg.com/embeddable-nfts/dist/nft-card.min.js"></script>
-                    <div class="pt-2 mb-4 ml-2 mt-4"><a href="{{ .Site.BaseURL }}blog/buy-a-piece-of-openemr-history" class="btn btn-primary font-weight-bold"><i class="fa fa-history"></i> Click here to see other available pieces of OpenEMR History</a></div>
+                    <div class="pt-2 mb-4 ms-2 mt-4"><a href="{{ .Site.BaseURL }}blog/buy-a-piece-of-openemr-history" class="btn btn-primary font-weight-bold"><i class="fa fa-history"></i> Click here to see other available pieces of OpenEMR History</a></div>
                     <style type="text/css">
                         #mc-embedded-subscribe-form input[type=checkbox]{display: inline; width: auto;margin-right: 10px;}
                         #mergeRow-gdpr {margin-top: 20px;}
@@ -41,7 +41,7 @@
                     <div class="card mb-1 d-none d-xl-flex">
                         <a href="{{ .Site.Params.demoUrl }}">
                             <div class="card-body">
-                                <img class="img-fluid float-left mr-4" src="{{ .Site.BaseURL }}img/monitor.png" alt="Card image cap" height="64" width="64">
+                                <img class="img-fluid float-left me-4" src="{{ .Site.BaseURL }}img/monitor.png" alt="Card image cap" height="64" width="64">
                                 <h4 class="card-title">Try Now</h4>
                                 <p class="card-text">Login to a fully functioning demo of OpenEMR</p>
                             </div>
@@ -50,7 +50,7 @@
                     <div class="card mb-1">
                         <a href="{{ "support" | absURL }}">
                             <div class="card-body">
-                                <img class="img-fluid float-left mr-4" src="{{ .Site.BaseURL }}img/info.png" alt="Card image cap" height="64" width="64">
+                                <img class="img-fluid float-left me-4" src="{{ .Site.BaseURL }}img/info.png" alt="Card image cap" height="64" width="64">
                                 <h4 class="card-title">Find Support</h4>
                                 <p class="card-text">Free, community-driven support to assist you</p>
                             </div>
@@ -59,7 +59,7 @@
                     <div class="card mb-1 d-none d-xl-flex">
                         <a href="{{ .Site.Params.downloadUrl }}">
                             <div class="card-body">
-                                <img class="img-fluid float-left mr-4" src="{{ .Site.BaseURL }}img/download-arrow.png" alt="Card image cap" height="64" width="64">
+                                <img class="img-fluid float-left me-4" src="{{ .Site.BaseURL }}img/download-arrow.png" alt="Card image cap" height="64" width="64">
                                 <h4 class="card-title">Download for Free</h4>
                                 <p class="card-text">Get the latest version for Windows, macOS, or Linux</p>
                             </div>
