--- a/themes/openemr/assets/scss/_nav.scss
+++ b/themes/openemr/assets/scss/_nav.scss
@@ -3,16 +3,16 @@
 }
 
 .default-state {
-  background-color: rgba(theme-color("primary"), 0.90) !important;
+  background-color: rgba(map-get($theme-colors, "primary"), 0.90) !important;
   @include media-breakpoint-down(md) {
-    background-color: theme-color("primary") !important;
+    background-color: map-get($theme-colors, "primary") !important;
   }
 }
 
 .armed-state {
   background-color: transparent;
   @include media-breakpoint-down(md) {
-    background-color: theme-color("primary") !important;
+    background-color: map-get($theme-colors, "primary") !important;
   }
 }
 
