Got a little ambitious with the renaming of things

--- a/themes/openemr/assets/scss/_variables.scss
+++ b/themes/openemr/assets/scss/_variables.scss
@@ -119,7 +119,7 @@ $theme-colors: (
 );
 
 // Set a specific jump point for requesting color jumps
-$theme-colors-interval: 8%;
+$theme-color-interval: 8%;
 
 
 // Nav users
