changed styles to match design guidelines

--- a/themes/openemr/assets/scss/_gt.scss
+++ b/themes/openemr/assets/scss/_gt.scss
@@ -29,7 +29,7 @@
         }
 
         a {
-            color: #111111;
+            color: $gray-900;
             &:hover {
                 text-decoration: none !important;
             }
