--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -14,7 +14,7 @@
                     <div class="card donation">
                         <a href="{{ .Site.BaseURL }}donate/">
                             <div class="card-body">
-                                <i class="fa fa-heart fa-4x float-left me-4"></i>
+                                <i class="text-white fa fa-heart fa-4x float-left me-4"></i>
                                 <h4 class="card-title">Give Now</h4>
                                 <div class="card-body">Help support future development of OpenEMR</div>
                             </div>
