--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -73,12 +73,21 @@
 <div class="main-content container-fluid">
   <section>
     <div class="col-sm-12">
-        <h1 class="display-3 text-center">
-          Fully Open-Source.
-          Free Software, Always and Forever.<br>
+      <h1 class="display-3 text-center">
+        Fully Open-Source.
+        Free Software, Always and Forever.<br>
       </h1>
       <p class="lead pt-3">OpenEMR is the most popular open source electronic health records and medical practice management solution. OpenEMR's goal is a superior alternative to its proprietary counterparts with passionate volunteers and contributors dedicated to guarding OpenEMR's status as a free, open source software solution for medical practices with a commitment to openness, kindness and cooperation.</p>
-  </div>
+      <br>
+      <h1 class="display-3 text-center">
+        ONC 2015 Cures Update Certified!<br>
+      </h1>
+      <p class="lead pt-3 pb-2">OpenEMR is ONC 2015 Cures Update Certified! More details on how the OpenEMR community completed this feat can be <a href="{{ .Site.BaseURL }}blog/openemr-achieves-onc-2015-cures-update-certification-with-groundbreaking-release-70/">found on our blog article</a>. The ONC 2015 Certification Transparency and Disclosure Requirements for OpenEMR can <a href="{{ .Site.BaseURL }}wiki/index.php/OpenEMR_Wiki_Home_Page#2015_ONC_Ambulatory_EHR_Certification">be viewed here</a>. Additional costs may apply and the additional costs disclosure can <a href="{{ .Site.BaseURL }}wiki/index.php/OpenEMR_Wiki_Home_Page#additional-costs-disclosure">be viewed here</a>.</p>
+      <div class="col text-center">
+          <img class="" src="{{ .Site.BaseURL }}img/ONC_Certification_HIT_2015Edition_CU_Stacked_RGB.jpg" alt="" height="300">
+          <img class="" src="{{ .Site.BaseURL }}img/SLI_Certification_Mark_2017-01.png" alt="" height="160">
+      </div>
+    </div>
 </div> <!-- end .row -->
 </div> <!-- end .row -->
 </section>
