--- a/themes/openemr/layouts/partials/footer.html
+++ b/themes/openemr/layouts/partials/footer.html
@@ -72,6 +72,10 @@
         <a href="https://www.flaticon.com/authors/linh-pham" title="Linh Pham">Linh Pham</a>,
         <a href="https://www.flaticon.com/authors/anhgreen" title="AnhGreen">AnhGreen</a>,
         <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a>
+        <br>
+        ONC CERTIFIED HIT® is a registered trademark of HHS.
+        <br>
+        SLI CERTIFIED® is a registered trademark of Gaming Laboratories International, LLC dba SLI Compliance.
       </small>
       </p>
     </div>
