--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -84,8 +84,8 @@
       </h1>
       <p class="lead pt-3 pb-2">OpenEMR is ONC 2015 Cures Update Certified! More details on how the OpenEMR community completed this feat can be <a href="{{ .Site.BaseURL }}blog/openemr-achieves-onc-2015-cures-update-certification-with-groundbreaking-release-70/">found on our blog article</a>. The ONC 2015 Certification Transparency and Disclosure Requirements for OpenEMR can <a href="{{ .Site.BaseURL }}wiki/index.php/OpenEMR_Wiki_Home_Page#2015_ONC_Ambulatory_EHR_Certification">be viewed here</a>. Additional costs may apply and the additional costs disclosure can <a href="{{ .Site.BaseURL }}wiki/index.php/OpenEMR_Wiki_Home_Page#additional-costs-disclosure">be viewed here</a>.</p>
       <div class="col text-center">
-          <img class="" src="{{ .Site.BaseURL }}img/ONC_Certification_HIT_2015Edition_CU_Stacked_RGB.jpg" alt="" height="300">
-          <img class="" src="{{ .Site.BaseURL }}img/SLI_Certification_Mark_2017-01.png" alt="" height="160">
+          <img class="img-fluid" style="max-height: 300px;" src="{{ .Site.BaseURL }}img/ONC_Certification_HIT_2015Edition_CU_Stacked_RGB.jpg" alt="">
+          <img class="img-fluid" style="max-height: 160px;" src="{{ .Site.BaseURL }}img/SLI_Certification_Mark_2017-01.png" alt="">
       </div>
     </div>
 </div> <!-- end .row -->
